src/test/resources/frontendReference/invalid/syntaxErr/class/simple/badClassAssignment.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at line 13:0 -- mismatched input 'end' expecting '('
1 parser error(s) detected, no further compilation attempted.
